[package]
name = "gemserv"
version = "0.1.0"
authors = ["int 80h <int@80h.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = [ "net", "io-util", "rt-threaded" ] }
tokio-rustls = "*"
rustls = "*"
futures-util = "*"
toml = "*"
serde = "*"
serde_derive = "*"
url = "*"
chrono = "0.4"
