[package]
name = "gemserv"
version = "0.1.0"
authors = ["int 80h <int@80h.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = [ "net", "io-util", "rt-threaded" ] }
openssl = "0.10"
tokio-openssl = "0.4"
futures-util = "0.3"
toml = "*"
serde = "*"
serde_derive = "*"
url = "*"
chrono = "0.4"
mime_guess = "2.0.3"
mime = "0.3.16"
log = "0.4"
simple_logger = "1"

[workspace]
members = [ "cgi-scripts/agena-cgi" ]
